# gx_sound-release

./: CHANGELOG.rst  PKGBUILD  README.md  arch.store  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  gbp.conf  rules
gx_sound/: CHANGELOG.rst  package.xml
gx_sound_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
gx_sound_player/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
gx_sound_player/example/: actionlib_client.py
gx_sound_player/src/gx_sound_player/: sound_player.py
rpm/: ros-kinetic-gx-sound-player.spec  ros-kinetic-gx-sound.spec  template.spec
