<?xml version="1.0"?>
<package format="2">
  <name>gx_sound_player</name>
  <version>0.2.0</version>
  <description>The gx_sound_player package</description>
  <maintainer email="dev@groove-x.com">GROOVE X Development Team</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/groove-x/gx_sound</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gx_sound_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
